<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="387dp"
        android:layout_height="244dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/successful_attempt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/success" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="321dp"
        android:layout_height="71dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/amarante"
        android:text="@string/you_got_lucky"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/amarante"
        android:text="@string/number_of_attempts"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="callMainMenu"
        android:text="@string/main_menu"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
</android.support.constraint.ConstraintLayout>